--- a/employee-website/src/app/home/home.component.html
+++ b/employee-website/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     </div>
   
     <!-- Home Page Header -->
-    <h2 class="home-header">Welcome to Employee Management</h2>
+    <h2 class="home-header">Welcome to Employee Directory Service</h2>
   
     <!-- Login Button with click event to navigate -->
     <button mat-raised-button color="primary" (click)="navigateToLogin()">Login</button>
