--- a/employee-website/src/app/layout/layout.component.html
+++ b/employee-website/src/app/layout/layout.component.html
@@ -23,7 +23,7 @@
       <button mat-icon-button (click)="sidenav.toggle()">
         <mat-icon>menu</mat-icon>
       </button>
-      <span>Employee Management</span>
+      <span>Employee Directory Service</span>
       <img src="../assets/logo.jpeg" alt="Logo" class="header-logo" />
     </mat-toolbar>
     <div class="content">
