--- a/employee-website/src/app/home/home.component.scss
+++ b/employee-website/src/app/home/home.component.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: linear-gradient(to right, #4facfe, #00f2fe); /* Beautiful gradient background */
+    background-color: #e0f7fa; 
     text-align: center;
   
     .logo-container {
@@ -19,7 +19,7 @@
   
     .home-header {
       font-size: 3rem;
-      color: #ffffff;
+      color: #000000;
       margin-bottom: 30px;
       font-family: 'Roboto', sans-serif;
       font-weight: 500;
